# YggDrasil

./: .gitignore  AUDIT_REPORT.md  DEVELOP.md  PROJECT_STRUCTURE.md  Philosophy-Part1-EN.md  README.md  REFACTORING_STATUS.md  TECHNICAL_SPECIFICATION.md  TODO.md  pyproject.toml  requirements-klein.txt  setup.py
Universe_Generator_3.0/: Philosophy.md  README.md  Scheme.md
Universe_Generator_3.0/docs/: 04_STAGE_LEVEL.md  06_UNIVERSE_LEVEL.md  EXAMPLE_ARITHMETIC_AT_GRAPH_LEVEL.md  EXAMPLE_ODES_AND_RECURSIVE_TASKS.md  PLAN_DEVELOPMENT_CANON.md  README.md  RECURSION_AND_HYPERGRAPH.md
WorldGenerator/: Abstract_Nodes_Level.md  Author_Creator_Interface.md  Graph_Stage_Level.md  Implementation_Status.md  Level_Hierarchy.md  Philosophy.md  README.md  To_do.md  Use_Cases_World.md  What_Is_Author.md  What_Is_World.md
WorldGenerator/Redesign/: MASTER_PLAN.md  README.md
WorldGenerator_2.0/: AGENT_SYSTEMS_SUPPORT.md  Abstract_Block_And_Node.md  Abstract_Task_Nodes.md  EXPANSION_UNIVERSE_GRAPH_OF_WORLDS.md  FANDOM_COM_SUPPORT.md  Graph_Level.md  LLM_API_SUPPORT.md  LORA_WORLD_LIGHTWEIGHT_CUSTOM.md  MODEL_REUSE.md  Philosophy.md  Pipeline_Level.md  README.md  SCALABILITY_AND_EXTENSIBILITY.md  SERIALIZATION_AT_ALL_LEVELS.md  Scheme.md  Stage_Level.md  System.md  TODO_01_FOUNDATION.md  TODO_02_TASK_NODES_AND_GRAPH.md  TODO_03_GRAPH_ENGINE.md  TODO_04_PIPELINE.md  TODO_05_STAGE.md  TODO_06_WORLD.md  TODO_07_FUTURE_AND_IMPROVEMENTS.md  TRAINABILITY_AT_ALL_LEVELS.md  TRAINING_REUSE_AND_API_SCENARIOS.md  World_Level.md  World_Serialization.md
YggDrasill_recurtion/documentation/: Philosophy.md
core/block/: base.py  graph.py  registry.py  slot.py
core/diffusion/: __init__.py  consistency.py  process.py
core/engine/: loop.py  pipeline.py  sampler.py
core/model/: __init__.py  backbone.py  codec.py  conditioner.py  guidance.py  modular.py
core/utils/: hooks.py
docs/: ADAPTERS.md  ARCHITECTURE_UNIFIED.md  DIFFUSERS_ABSTRACTS_ANALYSIS.md  DONE_01_FOUNDATION.md  DONE_02_TASK_NODES_AND_GRAPH.md  DONE_03_GRAPH_ENGINE.md  DONE_04_PIPELINE.md  DONE_05_STAGE.md  DONE_06_WORLD.md  DONE_07_FUTURE_AND_IMPROVEMENTS.md  EXPAND_DONE_AND_FUTURE.md  IP_ADAPTER_DESIGN.md  ORCHESTRATOR_PHASES.md  OUTLINE_TODO_02_TO_07.md  PLAN_TODO_02_AND_FORWARD.md  PLAN_TODO_03_VERIFIED_AND_FORWARD.md  REFACTORING_GRAPH_PIPELINE_ENGINE.md  VISION_AND_DOCUMENTATION_ROADMAP.md  animatediff_capabilities.md  api_reference.md  custom_blocks.md  tutorials.md  СТАТУС_ПО_ЭТАПАМ.md
docs/outdated/: DONE_07_FUTURE_AND_IMPROVEMENTS.md  OUTLINE_TODO_02_TO_07.md  PLAN_TODO_02_AND_FORWARD.md  PLAN_TODO_03_VERIFIED_AND_FORWARD.md
documentation/: CANON.md  README.md  Scheme.md
documentation/docs/: 01_FOUNDATION.md  02_ABSTRACT_TASK_NODES.md  03_TASK_HYPERGRAPH.md  04_WORKFLOW.md  05_STAGE.md  06_WORLD.md  07_UNIVERSE.md  AGENT_SYSTEMS.md  DIFFUSION_MODELS.md  DOMAINS_DEPLOYMENT_TRAINING.md  GLOSSARY.md  HYPERGRAPH_ENGINE.md  LANGUAGE_MODELS.md  SERIALIZATION.md  WIKI_AND_CONTENT_SOURCES.md
examples/: README.md  generate_sd15.py  sd15_custom_block.py  sd15_graph_from_scratch.py  sd15_hello.py  sd15_lego_swap.py
examples/audio/: README.md  from_pretrained.py  generate.py  list_templates.py
examples/diffusion/: README.md  flux_text2img.py  sdxl_base_refiner.py  sdxl_img2img.py  sdxl_manual_graph.py  sdxl_text2img.py
examples/images/: README.md  compare_diffusers_yggdrasil.py  generate_klein.py  generation_guide.ipynb
examples/pipelines/: README.md  combined_pipeline_example.py
examples/sd15/: 02_from_pretrained.py  03_img2img.py  04_custom_parameters.py  05_replace_solver.py  06_replace_guidance.py  07_build_minimal_graph.py  08_execute_graph_directly.py  09_controlnet.py  10_list_templates_blocks.py  README.md  generate.py  generate_diffusers.py
examples/sdxl/: generate_diffusers.py  generate_sdxl.py  generate_yggdrasil.py  sdxl_with_controlnet.py
examples/video/: compare_animatediff_image.py  test_animatediff_image.py
outdated/executor/: run.py
outdated/foundation/: graph.py  port.py  registry.py
outdated/pipeline/: run.py
outdated/task_nodes/: __init__.py  role_rules.py  stubs.py
output/: sd15_manual_graph.yaml  sd15_stub_graph.yaml
philosophy/: Philosophy-Part1.md  Philosophy-Part2.md  Philosophy-Part3.md
plugins/custom/: README.md  backbone.py  modality.py
reference/: README.md  pyproject.toml  setup.py
scripts/: clear_hf_cache.py  hf_login.py
temporary/: DEV_LOG.md  IMPLEMENTATION_PLAN.md  PHASE_0_STRUCTURE.md  PHASE_10_SERIALIZATION_POLISH.md  PHASE_1_FOUNDATION.md  PHASE_2_ENGINE.md  PHASE_3_TASK_HYPERGRAPH.md  PHASE_4_ABSTRACT_TASK_NODES.md  PHASE_5_SERIALIZATION.md  PHASE_6_WORKFLOW.md  PHASE_7_STAGE.md  PHASE_8_WORLD.md  PHASE_9_UNIVERSE.md  PSEUDOCODE_ARCHITECTURE.md  README.md  TODO.md  TODO_PART1.md  TODO_PART2.md  WORK_PLAN.md
tests/: __init__.py  conftest.py  test_assemblers.py  test_audio_pipelines.py  test_backbones.py  test_backward_compat.py  test_block_system.py  test_diffusion_processes.py  test_domain_scenarios.py  test_lego_constructor.py  test_model_families.py  test_orchestrator.py  test_param_utils.py  test_plugins.py
yggdrasil/: __init__.py  __main__.py  cli.py  hub.py  pipeline.py  runner.py
yggdrasil_only_like_context/: hub.py  pipeline.py  runner.py
yggdrasill/: __init__.py  templates.py
(+443 files in other folders)
