[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "yggdrasill"
version = "0.1.0"
description = "Yggdrasill — hypergraph framework from block to universe"
requires-python = ">=3.10"
readme = "README.md"
license = {text = "Apache-2.0"}
authors = [
    {name = "Yggdrasill Contributors"}
]
keywords = [
    "hypergraph",
    "framework",
    "diffusion",
    "workflow",
    "world-modeling",
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = []

[project.optional-dependencies]
yaml = [
    "pyyaml>=6.0",
]
diffusion = [
    "torch>=2.0",
    "diffusers>=0.28.0",
    "transformers>=4.35.0",
    "safetensors>=0.4.0",
    "Pillow>=9.0",
    "numpy>=1.24",
    "accelerate>=0.25.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["yggdrasill", "yggdrasill.*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-v"

[tool.ruff]
line-length = 120
target-version = "py310"
